--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <% } %>
       </tr>
       <tr>
-        <td>Weighted value (k€)</td>
+        <td>Weighted (*) value (k€)</td>
         <% for (var i = 0; i < store.stages.length; i++) { %>
             <td data-stage='<%= store.stages[i].id %>' data-type="weighted_value">
               <strong><%= Math.round(store.stages[i].pipewatch.sum.weighted_value / 1000, 1) %></strong>
@@ -153,7 +153,7 @@
         <% } %>
       </tr>
       <tr>
-        <td>Weighted value (k€)</td>
+        <td>Weighted (*) value (k€)</td>
         <% for (var i = 0; i < store.stages.length; i++) { %>
             <td data-stage='<%= store.stages[i].id %>' data-type="weighted_value">
               <strong><%= Math.round(store.stages[i].pipewatch.average.weighted_value / 1000, 1) %></strong>
@@ -162,6 +162,8 @@
       </tr>
     </tbody>
   </table>
+  <div class="clearfix"></div>
+  <p>(*) <strong>by stage</strong> (ie: 10k in a 10% closing probability stage = 1k weighted)</p>
 </script>
 
 <script type="text/html" id="pipeline_overview_tpl">
@@ -171,7 +173,7 @@
       <tr>
         <td>#deals</td>
         <td>Total value (k€)</td>
-        <td>Total weighted value (k€)</td>
+        <td>Total weighted (*) value (k€)</td>
         <td>Average deals / stage</td>
         <td>Average deal value (k€)</td>
         <td>Average deal weighted value (k€)</td>
@@ -221,7 +223,7 @@
         <% } %>
       </tr>
       <tr>
-        <td>Weighted value (k€)</td>
+        <td>Weighted (*) value (k€)</td>
         <% for (var i = 0; i < store.periods.length; i++) { %>
             <td data-stage='<%= i %>' data-type="weighted_value">
               <strong><%= Math.round(store.periods[i].pipewatch.sum.weighted_value / 1000, 1) %></strong>
@@ -230,6 +232,7 @@
       </tr>
     </tbody>
   </table>
+  <p>(*) <strong>by deal</strong> (ie: 10k for a 10% closing probability deal = 1k weighted)</p>
 </script>
 
 </body>
